--- a/wp-content/themes/manic-offshore-theme/css/forms.less
+++ b/wp-content/themes/manic-offshore-theme/css/forms.less
@@ -585,6 +585,10 @@ input.error {
     display: inline-block;
     margin-right: 5px;
   }
+  .hide-select {
+    visibility: hidden;
+    position: absolute;
+  }
 }
 
 #registration-page-form-3 {
