--- a/wp-content/themes/manic-offshore-theme/css/style.css
+++ b/wp-content/themes/manic-offshore-theme/css/style.css
@@ -1012,11 +1012,19 @@ label.country_options_label {
 .reg-step {
   display: none;
 }
-.reg-step .add-more {
+.reg-step .add-remove-btn-container {
+  text-align: right;
+}
+.reg-step .add-more,
+.reg-step .remove {
   font-family: "Open Sans", serif;
   font-size: 12px;
   color: #767676;
   text-align: right;
+  display: inline-block;
+}
+.reg-step .add-more {
+  margin-right: 10px;
 }
 .active {
   display: block!important;
@@ -2186,7 +2194,7 @@ body.home .rev_slider {
   text-align: right;
   display: block;
 }
-#company-address p {
+#company-address {
   font-family: Montserrat, sans-serif;
   color: #363636;
 }
