--- a/wp-content/themes/manic-offshore-theme/css/page_home.less
+++ b/wp-content/themes/manic-offshore-theme/css/page_home.less
@@ -20,6 +20,14 @@ body.home{
   .rev_slider{
     height: @homepage-slider-height !important;
   }  
+
+  #homepage-core-services-01 {
+    .mkdf-blog-box-whole-content {
+      .mkdf-boxes-item-title {
+        min-width: 170px;
+      }  
+    }    
+  }
 }
 
 //    ____    _    _   _ _   _ _____ ____    _____ _______  _______ 
@@ -153,7 +161,7 @@ body.home{
      .tp-caption.Deploy-button, .Deploy-button{
       background: @dark-blue !important;
       border: 2px solid @dark-blue !important;
-      padding: 13px 30px;
+      padding: 13px 30px;      
     }
     .tp-caption.Deploy-button:hover, .Deploy-button:hover{
       color: @dark-blue !important;
@@ -207,7 +215,7 @@ body.home{
 
     h4{
       font-size: 16px;
-      line-height: 21px;
+      line-height: 21px;      
     }
   }
 }
