--- a/wp-content/themes/manic-offshore-theme/css/sub_pages.less
+++ b/wp-content/themes/manic-offshore-theme/css/sub_pages.less
@@ -17,6 +17,7 @@
 }
 
 .dashboard {
+	padding-top: 70px;
     padding-bottom: 80px !important;
 
     .profile {
@@ -450,6 +451,7 @@
 	font-family: Montserrat,sans-serif;
     // font-size: 16px;
 	color: #363636;
+	margin-top: 20px;
 	
 }
 
