--- a/wp-content/themes/manic-offshore-theme/css/page_home.less
+++ b/wp-content/themes/manic-offshore-theme/css/page_home.less
@@ -162,6 +162,7 @@ body.home{
       background: @dark-blue !important;
       border: 2px solid @dark-blue !important;
       padding: 13px 30px;      
+      width: 190px;
     }
     .tp-caption.Deploy-button:hover, .Deploy-button:hover{
       color: @dark-blue !important;
@@ -292,6 +293,7 @@ body.home{
   margin-left: 0px;
   margin-right: 0px;
   overflow: hidden;
+  height: 300px;
 
   .homepage-why-column-version-04{
     padding-left: 30px;
