--- a/wp-content/themes/manic-offshore-theme/css/xs-general.less
+++ b/wp-content/themes/manic-offshore-theme/css/xs-general.less
@@ -13,10 +13,15 @@ html, body {
 		.mkdf-content-inner {
 			> .mkdf-container {
 				> .mkdf-container-inner {
-					padding-top: 0px;
+					padding-top: 30px;
+					.mkdf-section-inner {
+						width: 100%;
+					}
 				}	
 			}	
 		}	
 	}
-
+	.hidden-xs, .hidden-sm {
+		display: none;
+	}
 }
