--- a/wp-content/themes/manic-offshore-theme/css/xs-home.less
+++ b/wp-content/themes/manic-offshore-theme/css/xs-home.less
@@ -39,6 +39,7 @@
 					}
 					
 					#homepage-why-version-03 {
+						height: auto;
 						padding-bottom: 25px!important;
 						.homepage-why-column-version-04 {
 							margin-bottom: 25px;
