--- a/wp-content/themes/manic-offshore-theme/css/style.css
+++ b/wp-content/themes/manic-offshore-theme/css/style.css
@@ -138,6 +138,7 @@
     padding-top: 25px;
   }
   .home-page .mkdf-content .mkdf-content-inner > .mkdf-container > .mkdf-container-inner #homepage-why-version-03 {
+    height: auto;
     padding-bottom: 25px!important;
   }
   .home-page .mkdf-content .mkdf-content-inner > .mkdf-container > .mkdf-container-inner #homepage-why-version-03 .homepage-why-column-version-04 {
@@ -167,7 +168,17 @@
   }
   html .mkdf-content .mkdf-content-inner > .mkdf-container > .mkdf-container-inner,
   body .mkdf-content .mkdf-content-inner > .mkdf-container > .mkdf-container-inner {
-    padding-top: 0px;
+    padding-top: 30px;
+  }
+  html .mkdf-content .mkdf-content-inner > .mkdf-container > .mkdf-container-inner .mkdf-section-inner,
+  body .mkdf-content .mkdf-content-inner > .mkdf-container > .mkdf-container-inner .mkdf-section-inner {
+    width: 100%;
+  }
+  html .hidden-xs,
+  body .hidden-xs,
+  html .hidden-sm,
+  body .hidden-sm {
+    display: none;
   }
   .offshore-banking .core-services-first-copy-column {
     padding-right: 0px;
@@ -237,6 +248,62 @@
   #buddypress div.message-search {
     float: left;
     margin: 0px;
+  }
+  .stepwizard .stepwizard-step {
+    width: 18%!important;
+    margin-right: 22px!important;
+  }
+  .stepwizard .stepwizard-step:before {
+    right: -20px !important;
+    top: 35%!important;
+    width: 20px!important;
+    height: 20px!important;
+  }
+  .stepwizard .stepwizard-step button {
+    width: 100%!important;
+    background-size: contain!important;
+  }
+  .stepwizard .stepwizard-step p {
+    top: 55px;
+    width: 80px;
+    left: 5px!important;
+    font-size: 10px;
+    line-height: 15px;
+  }
+  #registration-page-form-1-1 .each-header,
+  #registration-page-form-1-1 .each-content {
+    vertical-align: top!important;
+  }
+  #registration-page-form-1-1 .each-header:nth-of-type(1),
+  #registration-page-form-1-1 .each-content:nth-of-type(1) {
+    width: 25%;
+  }
+  #registration-page-form-1-1 .each-header:nth-of-type(2),
+  #registration-page-form-1-1 .each-content:nth-of-type(2) {
+    width: 35%;
+  }
+  #registration-page-form-1-1 .each-header:nth-of-type(3),
+  #registration-page-form-1-1 .each-content:nth-of-type(3) {
+    width: 13%;
+  }
+  #registration-page-form-1-1 .each-header:nth-of-type(4),
+  #registration-page-form-1-1 .each-content:nth-of-type(4) {
+    width: 20%!important;
+  }
+  #registration-page-form-1-1 .each-header:nth-of-type(4) button,
+  #registration-page-form-1-1 .each-content:nth-of-type(4) button {
+    font-size: 12px!important;
+    line-height: 1.3em!important;
+  }
+  #registration-page-form-2 .custom-input-container-left {
+    width: 100%;
+  }
+  #registration-page-form-2 .custom-input-container-right {
+    width: 35%;
+    margin-top: 30px;
+  }
+  #registration-page-form-2 .total-share-container {
+    width: 50%;
   }
 }
 body {
@@ -1929,8 +1996,10 @@ body.home #homepage-core-services-01 .mkdf-blog-box-whole-content .mkdf-boxes-it
 .offshore h2 {
   font-size: 24px;
 }
+#copy-banner {
+  display: none;
+}
 .dashboard {
-  padding-top: 70px;
   padding-bottom: 80px !important;
 }
 .dashboard #profile-edit-form .bp-required-field-label {
@@ -1982,6 +2051,17 @@ body.home #homepage-core-services-01 .mkdf-blog-box-whole-content .mkdf-boxes-it
   color: #8D9394!important;
   border: none!important;
   cursor: default!important;
+}
+.dashboard .delete-saved-company {
+  color: #8D9394;
+  margin-left: 10px;
+  vertical-align: middle;
+}
+.dashboard .delete-saved-company i {
+  font-size: 20px;
+}
+.dashboard .delete-saved-company:hover {
+  color: #008b9b;
 }
 .dashboard #subnav ul li a {
   padding: 0px 20px!important;
@@ -2131,15 +2211,16 @@ body.home #homepage-core-services-01 .mkdf-blog-box-whole-content .mkdf-boxes-it
 .dashboard form .field-visibility-settings-notoggle {
   display: none;
 }
+.dashboard form select[disabled],
 .dashboard form input[disabled] {
   background: #DADADA!important;
   border: 0px!important;
   color: #8D9394!important;
 }
-#buddypress div.item-list-tabs ul li#starred-personal-li {
+#buddypress div.item-list-tabs ul li#notices-personal-li {
   display: none;
 }
-#buddypress div.item-list-tabs ul li#notices-personal-li {
+#buddypress .thread-star .icon {
   display: none;
 }
 #buddypress div.item-list-tabs ul li.current a,
@@ -2285,8 +2366,10 @@ body.home #homepage-core-services-01 .mkdf-blog-box-whole-content .mkdf-boxes-it
 }
 .circle-container .circle {
   background-color: #008b9b;
-  -webkit-border-radius: 100px;
-  border-radius: 100px;
+  border: 4px solid #ffffff;
+  box-shadow: 4px 4px 9px -4px rgba(0, 0, 0, 0.4);
+  -webkit-border-radius: 100%;
+  border-radius: 100%;
   -moz-background-clip: padding;
   -webkit-background-clip: padding-box;
   background-clip: padding-box;
