--- a/wp-content/themes/manic-offshore-theme/css/xs-subpages.less
+++ b/wp-content/themes/manic-offshore-theme/css/xs-subpages.less
@@ -85,3 +85,60 @@
 		margin: 0px;
 	}
 }
+
+.stepwizard {
+	.stepwizard-step {
+		width: 18%!important;
+    	margin-right: 22px!important;
+		&:before {
+	        right: -20px !important;
+			top: 35%!important;
+		    width: 20px!important;
+			height: 20px!important;
+		}
+		button {
+			width: 100%!important;
+			background-size: contain!important;
+		}
+		p {
+		    top: 55px;
+		    width: 80px;
+		    left: 5px!important;
+		    font-size: 10px;
+		    line-height: 15px;
+		}
+	}	
+}
+#registration-page-form-1-1 {
+	.each-header,.each-content {
+		vertical-align: top!important;
+		&:nth-of-type(1) {
+			width: 25%;
+		}		
+		&:nth-of-type(2) {
+			width: 35%;
+		}		
+		&:nth-of-type(3) {
+			width: 13%;
+		}
+		&:nth-of-type(4) {
+			width: 20%!important;
+			button {
+			    font-size: 12px!important;
+				line-height: 1.3em!important;
+			}
+		}
+	}
+}
+#registration-page-form-2 {	
+	.custom-input-container-left {
+		width: 100%;
+	}
+	.custom-input-container-right {
+		width: 35%;
+		margin-top: 30px;
+	}
+	.total-share-container {
+		width: 50%;
+	}
+}
